# test-case-qualia

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: Tooltip.svelte
src/qualia_lerobot_augmentor/: __init__.py  __main__.py  api.py  cli.py  config.py  dataset_card.py  publisher.py  service.py  source.py  video.py
tests/: test_publisher.py  test_service.py  test_video.py
