[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qualia-lerobot-augmentor"
version = "0.1.0"
description = "Dataset augmentation CLI for LeRobot v3 datasets with Hugging Face Hub publishing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub>=0.24.0",
  "imageio-ffmpeg>=0.6.0",
  "numpy>=1.24.0",
  "opencv-python-headless>=4.9.0.80",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
web = [
  "fastapi>=0.135.2",
  "uvicorn>=0.42.0",
]

[project.scripts]
qualia-augment = "qualia_lerobot_augmentor.cli:main"
qualia-augment-web = "qualia_lerobot_augmentor.api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

